Agregado el contenido adicionla del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
     <p>Y este es el parrafo de inicio donde vamos a expplicar las
         cosas incribles que se pueden hacer con ramas
     </p>
+    <p>
+        los blog son la mejor forma de compartir información y tus ideas mucho mas que ir a conferencias
+    </p>
 </div>
 </div>
 </body>
