--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">tu blog de confianza</span>
+            Hyperblog <span id="tagline">tu blog de maestro</span>
         </div>
         <div id="post">
     <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -17,6 +17,7 @@
     <p>
         los blog son la mejor forma de compartir información y tus ideas mucho mas que ir a conferencias
     </p>
+    <p>suscibete y dale like</p>
 </div>
 </div>
 </body>
